@@ -15,6 +15,7 @@
 
 -= Fixes =-
 - Fixed an issue where double high plants like rice and corn would not grow at all on their second block due to the naive implementation of IguanaTweaks' change to make crops require water. This requirement has as such been disabled.
+- Fixed quark not treating the sack from Supplementaries as a Shulker Box
 
 ---=== Version 0.3.0 ===---
 -= Modlist Changes =-
